2009-01-10  Marcus Krause   <marcus#exp2009@t3sec.info>

	* Bug #2439: In case of a modifed HASHCOUNT, a non-valid PHPass password would be set
	* Bug #2438: Missing 2nd argument for method call updatePassword in service class
	* Bug #2440: In PHPass method isHashUpdateNeeded() current hashcount is accessed by using class constant
	* Feature #2441: Only require a hash update if hash count has been increased
	* Task #2437: Use shorthand logical comparisons


2009-01-06  Marcus Krause   <marcus#exp2009@t3sec.info>

	* Task #2410: Adjust mail address of maintainer to reflect new year


2008-12-19  Marcus Krause   <marcus#exp2009@t3sec.info>

	* Bug #2339: Extension key "t3sec_saltedpw" was NOT loaded
	* Bug #2351: class.ext_update.php throws warning if current password length < 4


2008-12-16  Marcus Krause   <marcus#exp2009@t3sec.info>

	* Task #2324: Improve wording and wording consistency in file ChangeLog
	* Task #2325: Improve readability of extension manual


2008-12-15  Marcus Krause   <marcus#exp2009@t3sec.info>

	* Bugfix #2241:  Manual does not get rendered on typo3.org
	* Bugfix #2310:  LL label "ll_enter_your_data" only available in english
	* Bugfix #2311:  ux_felogin_pi1: Send mail with password
	* Bugfix #2312:  $LANG not available
	* Bugfix #2319:  BE-User password is salted, but user auth is used the normal
	* Task #2320:    Comment cleanup in felogin XCLASS


2008-12-13  Marcus Krause   <marcus#exp2009@t3sec.info>

	* Bugfix #2241: Manual does not get rendered on typo3.org
	* Bugfix #2243: Refer to forge instead of bugtracker in regards to extension bugs.


2008-12-11  Marcus Krause   <marcus#exp2009@t3sec.info>

	* Feature #2300: Backport improvements introduced by new method in trunk::t3lib_div
	* Feature #2301: Use randomBytes generator to create passwords
	* Feature #2302: Use randomBytes generator of t3lib_div for TYPO3 versions >= 4.3


2008-12-10  Marcus Krause   <marcus#exp2009@t3sec.info>

	* Bugfix #2242: Extension title too long

